refactor: improved queries.